5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4165/executions/1723_2505.log
== SUBMITION (2019-05-16 06:23:47) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - 1
	
	while(k > 1):
		soma = soma + ((-1) ** 1 * (x **(2 *i + 1))) / (factorial (2 * 1 + 1))
		i = i + 1
	print(round(soma, 10))
-- EXECUTION TIME:
0.231902
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 9
    while(k > 1):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:24:19) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - 1
	
	while(k > 1):
		soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * 1 + 1))
		i = i + 1
	print(round(soma, 10))
-- EXECUTION TIME:
0.207194
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 9
    while(k > 1):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:24:46) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - 1
	
	while(k > 1):
		soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
	print(round(soma, 10))
-- EXECUTION TIME:
0.125814
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 9
    while(k > 1):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:24:56) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - 1
	
	while(k > 1):
		soma = soma + ((-1) ** 1 * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
	print(round(soma, 10))
-- EXECUTION TIME:
0.123455
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 9
    while(k > 1):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:25:46) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
1 = 0
fim = k - 1
	
	while(k > 1):
		soma = soma + ((-1) ** 1 * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
	print(round(soma, 10))
-- EXECUTION TIME:
0.149005
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 9
    while(k > 1):
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:26:46) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
	while(k > 1):
		soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
	print(round(soma, 10))
-- ERROR:
File "XXXX", line 9
    while(k > 1):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:27:08) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
	while(k > i):
		soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
	print(round(soma, 10))
-- ERROR:
File "XXXX", line 9
    while(k > i):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:27:37) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:28:13) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		1 = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    1 = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:28:56) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		1 = 1 + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    1 = 1 + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:29:14) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + i
print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + i
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:29:22) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.195267
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 11
    i = i + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:29:25) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 06:29:43) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		f = i + 1
print(round(soma, 10))
-- EXECUTION TIME:
0.164333
-- ERROR:
  File "/home/codebench/codes/1723/2505/main.py", line 11
    f = i + 1
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:29:46) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		f = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    f = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 06:30:18) 
-- CODE:
from math import *
x = eval(input("Insira o angulo: "))
k = int(input("Insira o numero de termos: "))

soma = 0
i = 0
fim = k - i
	
while(k > i):
	soma = soma + ((-1) ** i * (x **(2 *i + 1))) / (factorial (2 * i + 1))
		i = i + 1
print(round(soma, 10))
-- ERROR:
File "XXXX", line 11
    i = i + 1
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
